<resources>
    <string name="app_name">Soft Logistica</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

<!--    Nav Menu Items-->
    <string name="menu_order">Pedidos</string>
    <string name="menu_budget">Presupuestos</string>
    <string name="services">Servicios</string>
    <string name="menu_service_and_product">Solicitar un servicio</string>
    <string name="menu_store">Tienda</string>
    <string name="menu_camera">Camara</string>
    <string name="menu_new_product">Nuevo producto</string>
    <string name="menu_product">Productos</string>
    <string name="menu_delivery_note">Albaranes</string>
    <string name="menu_invoice">Facturas</string>
    <string name="menu_qr_code">QR</string>
    <string name="new_product_title">Nuevo Producto</string>
    <string name="edit_product_title">Editar Producto</string>
    <string name="internal_code_text_view">Código interno</string>
    <string name="brand_text_view">Marca</string>
    <string name="model_text_view">Modelo</string>
    <string name="picture_product_text_view">Foto del equipo</string>
    <string name="picture_pieces_text_view">Foto de las piezas</string>
    <string name="license_text_view">Licencia</string>
    <string name="buy_price_text_view">Precio de compra</string>
    <string name="sale_price_text_view">Precio de venta</string>
    <string name="rental_price_month_text_view">Precio de alquiler / mes</string>
    <string name="rental_price_day_text_view">Precio de alquiler / día</string>
    <string name="rental_price_hour_text_view">Precio de alquiler / hora</string>
    <string name="route_price_km_text_view">Precio de ruta / km</string>
    <string name="journey_price_text_view">Precio del trayecto</string>
    <string name="height_text_view">Altura</string>
    <string name="width_text_view">Anchura</string>
    <string name="depth_text_view">Profundidad</string>
    <string name="weight_text_view">Peso neto kg</string>
    <string name="tare_text_view">Tara kg</string>
    <string name="power_text_view">Potencia</string>
    <string name="mma_text_view">Masa Maxima Autorizada</string>
    <string name="description_text_view">Descripcion</string>
    <string name="capture_image_fragment">Capturar imagen</string>
    <string name="product_detail_fragment">Detalle del producto</string>
    <string name="bar_code_fragment">Escaner QR</string>
    <string name="edit_product_fragment">Editar producto</string>
    <string name="error_login">Usuario o contraseña incorrectos.</string>
    <string name="preference_file_key">preferences_file_key</string>


    <string-array name="items_menu_text">
        <item>Maquinaria</item>
        <item>Medios Auxiliares</item>
        <item>Trasnporte</item>
    </string-array>


<!--Messages-->
    <string name="error_refresh_cart">"Error al actualizar los productos del carrito"</string>
    <string name="chat">Chat</string>
    <string name="document_signing">Firma de documentos</string>


</resources>

