<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/item"
            android:title="" />

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_twotone_inbox_24"
            tools:visible="true"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_outline_store_mall_directory_24"
            android:title="@string/menu_store" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_baseline_local_shipping_24"
            tools:visible="true"
            android:title="@string/menu_service_and_product" />

        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_outline_request_quote_24"
            android:title="@string/menu_budget" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_outline_article_24"
            android:title="@string/menu_order" />

        <item
            android:id="@+id/nav_delivery_note"
            android:icon="@drawable/ic_outline_file_copy_24"
            android:title="@string/menu_delivery_note" />

        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_outline_receipt_long_24"
            android:title="@string/menu_invoice" />

        <item
            android:id="@+id/nav_qr_code"
            android:icon="@drawable/ic_outline_qr_code_24"
            tools:visible="true"
            android:title="@string/menu_qr_code" />

        <item
            android:id="@+id/nav_document_signing"
            android:icon="@drawable/ic_baseline_create_24"
            tools:visible="true"
            android:title="@string/document_signing" />

    </group>

</menu>